tinyc/test/bad/ptr-diff-uchar-schar.c
int main()
{
    unsigned char *p1;
    signed char *p2;

    p1 - p2;
    return 0;
}
